# DuckDB-poc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: strava_pipeline.yml
src/ducklake/: copy_db_to_lake.py  create.py  query_ducklake.py
src/motherduck/: connect_ducklake_motherduck.py  create_ducklake.py  query_gold_s3.py  transform_s3.py
src/pipelines/deprecated/: extract_strava_api_data.py  test_token_refresh.py
src/pipelines/deprecated/local_pipelines/: bronze.py  gold.py  raw.py  silver.py
src/pipelines/deprecated/s3_pipelines/: elt.py  test.py
src/pipelines/e2e_pipelines/: connect_s3_motherduck.py  create_dims.py  delete.py  elt_to_s3.py  extract_from_api.py  main.py
src/stress_test/: testv1.py
src/table_queries/: notebook_query.ipynb  query_gold.py  test_http_response.py  test_query.py
